Improvements in prometheus-operator installer

--- a/prometheus/install_prometheus-operator_k8s/helm_vars/aws/production/mycluster1.yaml
+++ b/prometheus/install_prometheus-operator_k8s/helm_vars/aws/production/mycluster1.yaml
@@ -8,7 +8,7 @@ prometheus:
         cpu: 500m
         memory: 500Mi
     externalLabels:
-      cluster: kind-kind-multinodes
-      region: sa-east-1
+      cluster: mycluster1
+      region: us-east-2
 
 
