--- a/prometheus/install_prometheus-operator_k8s/helm_vars/aws/testing/kind-mykube.yaml
+++ b/prometheus/install_prometheus-operator_k8s/helm_vars/aws/testing/kind-mykube.yaml
@@ -8,5 +8,5 @@ prometheus:
         cpu: 500m
         memory: 500Mi
     externalLabels:
-      cluster: kind-kind-multinodes
-      region: sa-east-1
+      cluster: kind-mykube
+      region: us-east-2
