--- a/prometheus/install_prometheus-operator_k8s/helm_vars/aws/testing/mycluster3.yaml
+++ b/prometheus/install_prometheus-operator_k8s/helm_vars/aws/testing/mycluster3.yaml
@@ -8,5 +8,5 @@ prometheus:
         cpu: 500m
         memory: 500Mi
     externalLabels:
-      cluster: kind-kind-multinodes
+      cluster: mycluster3
       region: sa-east-1
