--- a/aws_services/modules/kubernetes-1-26/templates/fluentbit-02-compatible.yaml
+++ b/aws_services/modules/kubernetes-1-26/templates/fluentbit-02-compatible.yaml
@@ -43,6 +43,7 @@ data:
   fluent-bit.conf: |
     [SERVICE]
         Flush                     5
+        Grace                     30
         Log_Level                 info
         Daemon                    off
         Parsers_File              parsers.conf
@@ -64,6 +65,9 @@ data:
         Tag                 application.*
         Exclude_Path        /var/log/containers/cloudwatch-agent*, /var/log/containers/fluent-bit*
         Path                /var/log/containers/*.log
+        Docker_Mode         On
+        Docker_Mode_Flush   5
+        Docker_Mode_Parser  container_firstline
         Parser              docker
         DB                  /var/fluent-bit/state/flb_container.db
         Mem_Buf_Limit       50MB
@@ -310,7 +314,7 @@ spec:
     spec:
       containers:
       - name: fluent-bit-compatible
-        image: public.ecr.aws/aws-observability/aws-for-fluent-bit:2.28.4
+        image: public.ecr.aws/aws-observability/aws-for-fluent-bit:2.31.10
         imagePullPolicy: Always
         env:
             - name: AWS_REGION
@@ -348,10 +352,10 @@ spec:
                 fieldRef:
                   fieldPath: spec.nodeName
             - name: CI_VERSION
-              value: "k8s/1.3.11"
+              value: "k8s/1.3.14"
         resources:
             limits:
-              memory: 250Mi
+              memory: 200Mi
             requests:
               cpu: 50m
               memory: 50Mi
